objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Quip Document Link for the Account Plan</description>
        <label>Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Information_Validated__c</fullName>
        <label>Contact Information Validated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <label>Credit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Remaining__c</fullName>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <formula>CreditLimit__c -  Credit_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Revenue_Goal__c</fullName>
        <label>Current Year Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Home_Improvement_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Home Improvement Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_AnnualExpenses__c</fullName>
        <label>Annual Expenses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0-$50,000</fullName>
                </value>
                <value>
                    <fullName>$50,000-$100,000</fullName>
                </value>
                <value>
                    <fullName>$100,000-$250,000</fullName>
                </value>
                <value>
                    <fullName>$250,000-$500,000</fullName>
                </value>
                <value>
                    <fullName>Over $500,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Assets_Under_Management__c</fullName>
        <label>Assets Under Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Assets__c</fullName>
        <description>Asset Management:</description>
        <label>Assets</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_B2B_Client_Profile_Summary__c</fullName>
        <label>B2B Client Profile Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_New_Markets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Markets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CapitalAppreciationRank__c</fullName>
        <label>Capital Appreciation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_ClientSummaryRich__c</fullName>
        <description>Using Gen AI to create a summary of the client profile</description>
        <label>ClientSummaryRich</label>
        <length>131071</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FINS_Client_Profile_Summary__c</fullName>
        <description>Using Gen AI to create a summary of the client profile</description>
        <label>Client Profile Summary</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Currency_YTD__c</fullName>
        <description>Asset Management commissions Year To Date</description>
        <label>Currency YTD</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Account_Insights__c</fullName>
        <inlineHelpText>Choose the insight you&apos;d like to display for this account</inlineHelpText>
        <label>Einstein - Account Insights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merger &amp; Acquisition</fullName>
                </value>
                <value>
                    <fullName>Company Expanding</fullName>
                </value>
                <value>
                    <fullName>Company Cost Cutting</fullName>
                </value>
                <value>
                    <fullName>Leadership Change</fullName>
                </value>
                <value>
                    <fullName>Prospect unresponsive</fullName>
                </value>
                <value>
                    <fullName>No communication</fullName>
                    <default>true</default>
                    <label>No communication</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_1_Date__c</fullName>
        <inlineHelpText>Enter the date for the first article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_1_Source__c</fullName>
        <inlineHelpText>Enter the source for the first article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 1 Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_1_Title__c</fullName>
        <inlineHelpText>Enter the title for the first article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 1 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_1_URL__c</fullName>
        <inlineHelpText>Enter the URL for the first article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_2_Date__c</fullName>
        <inlineHelpText>Enter the date for the second article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_2_Source__c</fullName>
        <inlineHelpText>Enter the source for the second article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 2 Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_2_Title__c</fullName>
        <inlineHelpText>Enter the title for the second article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 2 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_2_URL__c</fullName>
        <inlineHelpText>Enter the URL for the second article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_3_Date__c</fullName>
        <inlineHelpText>Enter the date for the third article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_3_Source__c</fullName>
        <inlineHelpText>Enter the source for the third article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 3 Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_3_Title__c</fullName>
        <inlineHelpText>Enter the title for the third article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 3 Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Einstein_Article_3_URL__c</fullName>
        <inlineHelpText>Enter the URL for the third article you&apos;d like to display</inlineHelpText>
        <label>Einstein - Article 3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FINS_Financial_Plan_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When toggled prototype builder launches goal update workflow in moneyguide pro and updates chance of success on target account&apos;s related financial plan to 90%</description>
        <label>Financial Plan Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_ForeignCurrencyExperience__c</fullName>
        <label>Foreign Currency Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InvestmentExperience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_ForeignCurrencyKnowledge__c</fullName>
        <label>Foreign Currency Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InvestmentKnowledge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_ForeignCurrencyPercentage__c</fullName>
        <label>Foreign Currency Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_ForeignSecuritiesExperience__c</fullName>
        <label>Foreign Securities Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InvestmentExperience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_ForeignSecuritiesKnowledge__c</fullName>
        <label>Foreign Securities Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InvestmentKnowledge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_ForeignSecuritiesPercentage__c</fullName>
        <label>Foreign Securities Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Insurance_PGP__c</fullName>
        <description>Preferred Gender Pronoun</description>
        <inlineHelpText>Preferred Gender Pronoun</inlineHelpText>
        <label>PGP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>He/Him/His</fullName>
                </value>
                <value>
                    <fullName>She/Her/Hers</fullName>
                </value>
                <value>
                    <fullName>They/Them/Theirs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Last_Transaction__c</fullName>
        <description>Last Transaction field for Highlights Panel on Account Record</description>
        <label>Last Transaction</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Point_of_Entry__c</fullName>
        <label>Point of Entry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car Loan</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Personal Loan</fullName>
                </value>
                <value>
                    <fullName>Commercial Loan</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
                <value>
                    <fullName>Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Treasury Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Lines_of_Business__c</fullName>
        <label>Lines of Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boiler &amp; Machinery</fullName>
                </value>
                <value>
                    <fullName>Commercial Auto &amp; Trucking</fullName>
                </value>
                <value>
                    <fullName>CommercialProperty</fullName>
                    <label>Commercial Property</label>
                </value>
                <value>
                    <fullName>Cyber</fullName>
                </value>
                <value>
                    <fullName>Environmental Liability</fullName>
                </value>
                <value>
                    <fullName>Excess Casualty &amp; Umbrella</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Group Benefits</fullName>
                </value>
                <value>
                    <fullName>Inland Marine</fullName>
                </value>
                <value>
                    <fullName>Management &amp; Professional Liability</fullName>
                </value>
                <value>
                    <fullName>Ocean Marine</fullName>
                </value>
                <value>
                    <fullName>Small Business Owner&apos;s Policy</fullName>
                </value>
                <value>
                    <fullName>SuretyBonds</fullName>
                    <label>Surety Bonds</label>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_New_Financial_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Toggled, a flow will run to launch prototype clickthrough for moneyguide pro workflow and New financial plan and financial goals will be created related to target records</description>
        <label>Financial Plan New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Paused_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paused Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Investment_Focus__c</fullName>
        <label>Investment Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Early Start Up Fund</fullName>
                </value>
                <value>
                    <fullName>Fund of Funds</fullName>
                </value>
                <value>
                    <fullName>Growth Fund</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Residential Real Estate</fullName>
                </value>
                <value>
                    <fullName>Mixed Use Properties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Pronouns__c</fullName>
        <label>Pronouns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>He/Him/His</fullName>
                </value>
                <value>
                    <fullName>She/Her/Hers</fullName>
                </value>
                <value>
                    <fullName>They/Them/Theirs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Rating_Indicator__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 0, &apos;015Hr000004ZYwx&apos;, &apos;015Hr000004ZYwy&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 1, &apos;015Hr000004ZYwx&apos;, &apos;015Hr000004ZYwy&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 2, &apos;015Hr000004ZYwx&apos;, &apos;015Hr000004ZYwy&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 3, &apos;015Hr000004ZYwx&apos;, &apos;015Hr000004ZYwy&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 4, &apos;015Hr000004ZYwx&apos;, &apos;015Hr000004ZYwy&apos;),&apos;&apos;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Relationship_Plan__c</fullName>
        <label>Relationship Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FINS_Requests_Last_30__c</fullName>
        <label># of Requests (Last 30 Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Retail_Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Retail_Customer_Value__c</fullName>
        <formula>IF( (FINS_Retail_Net_Worth__c &gt;2000000),&quot;High Priority&quot;, IF(AND(FINS_Retail_Net_Worth__c &lt; 2000000, FINS_Retail_Net_Worth__c &gt; 1000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Retail_Liabilities__c</fullName>
        <label>Liabilities</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Retail_Net_Worth__c</fullName>
        <formula>FINS_Retail_Annual_Income__c+ FINS_Retail_Personal_Assets__c+ FINS_Retail_Other_Income__c-FINS_Retail_Liabilities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Retail_Other_Income__c</fullName>
        <label>Other Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Retail_Personal_Assets__c</fullName>
        <label>Personal Assets</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Social_Name__c</fullName>
        <label>Social Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_SpecialExpenses__c</fullName>
        <label>Special Expenses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0-$50,000</fullName>
                </value>
                <value>
                    <fullName>$50,000-$100,000</fullName>
                </value>
                <value>
                    <fullName>$100,000-$250,000</fullName>
                </value>
                <value>
                    <fullName>Over $250,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_StocksPercentage__c</fullName>
        <label>Stocks Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Summary_of_Activities__c</fullName>
        <label>Summary of Activities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Summary_of_Financial_Accounts__c</fullName>
        <description>Using Gen AI to create a summary of the client profile</description>
        <label>Summary of Financial Accounts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Summary_of_Financial_Goals_Plans__c</fullName>
        <description>Using Gen AI to create a summary of the client profile</description>
        <label>Summary of Financial Goals and Plans</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Summary_of_Interaction_Summaries__c</fullName>
        <description>Using Gen AI to create a summary of the client profile</description>
        <label>Summary of Interaction Summaries</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Summary_of_Invoices__c</fullName>
        <label>Summary of Invoices</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Summary_of_Open_Cases__c</fullName>
        <description>Using Gen AI to create a summary of the client profile</description>
        <label>Summary of Open Cases</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Summary_of_Opportunities__c</fullName>
        <label>Summary of Opportunities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Summary_of_Orders__c</fullName>
        <label>Summary of Orders</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Value__c</fullName>
        <description>This field drives the Value Indicator field.  Enter a value of 1-5.</description>
        <label>Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_X12_Months_Sales_Trend__c</fullName>
        <description>12 months sales trend for Asset Mgmt</description>
        <label>12 Months Sales Trend</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_X90_Day_Sales_Trend__c</fullName>
        <description>Asset Management: 90 Days&apos; trend of assets as a %</description>
        <label>90 Day Sales Trend</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Years_to_Retirement__c</fullName>
        <formula>65 - (if(And(Month(Today())&gt;= month(PersonBirthdate), Day(Today()) &gt;= Day(PersonBirthdate)),
Year(Today())- Year(PersonBirthdate) +
(Month(Today())-Month(PersonBirthdate))/12,
if(And(month(Today())&lt; month(PersonBirthdate), Day(Today())&gt;= Day(PersonBirthdate)),
Year(Today())-Year(PersonBirthdate)-1 +
(12 - Month(PersonBirthdate)+month(Today()))/12,
if(And( month(Today())&lt; month(PersonBirthdate), Day(Today())&lt; Day(PersonBirthdate)),
(Year(Today())-Year(PersonBirthdate)-1) +
((12 - Month(PersonBirthdate)+month(Today())-1))/12,
if(And( month(Today())= month(PersonBirthdate), Day(Today())&lt; Day(PersonBirthdate)),
(Year(Today())- Year(PersonBirthdate)-1) + (11/12),
(Year(Today())- Year(PersonBirthdate)) +
(Month(Today())-Month(PersonBirthdate)-1)/12)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years to Retirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ_IDO_Flags__c</fullName>
        <label>IDO Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ_IDO_Flags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AUM__c</fullName>
        <description>Value of client&apos;s financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalAUMPrimaryOwner__c + FinServ__TotalAUMJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BankNumber__c</fullName>
        <label>Bank Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BorrowingHistory__c</fullName>
        <label>Borrowing History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Limited to No History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__BorrowingPriorities__c</fullName>
        <label>Borrowing Priorities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Build Equity</fullName>
                </value>
                <value>
                    <fullName>Debt Consolidation</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Large Capital Purchases</fullName>
                </value>
                <value>
                    <fullName>Property Purchase</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__BranchCode__c</fullName>
        <label>Branch Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BranchName__c</fullName>
        <label>Branch Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ClaimsOnHouseholdPolicies__c</fullName>
        <description>The total number of claims that were ever raised for the policies currently owned by the policyholder&apos;s primary household.</description>
        <inlineHelpText>This includes all the claims (irrespective of their current status), including the ones that are settled, as long as the related policy is active.</inlineHelpText>
        <label>Claims on Household Policies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__ClientCategory__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <description>Lead conversion Date and Time</description>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreditRating__c</fullName>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerID__c</fullName>
        <label>Customer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerSegment__c</fullName>
        <label>Customer Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Market</fullName>
                </value>
                <value>
                    <fullName>Mass Affluent</fullName>
                </value>
                <value>
                    <fullName>Wealth Accumulation</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Long Term Growth</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Millennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CustomerType__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Relational</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>